Switched RUID hash implementation to xx3hash (#6195)
* added xxh3 libraries

* Implemented xxh3 hash test

* increased blocksize

* adjusted chunk to 256mb for very large files.

* Switched to JDK 25, for a stable Memory API.

* modified comment

* removed x86 builds (32 bit)

* change implementation to JDK 17 compatibility.

* Revert "removed x86 builds (32 bit)"

This reverts commit 3a259a77c48cf9f7a5d86a3f941aa88437be169a.

* reset ruid values

* lint error

---------

Co-authored-by: ik666 <satfreak666@gmx.de>